--- a/style.css
+++ b/style.css
@@ -15,7 +15,9 @@
 }
 /* nav style  */
 
-
+.secondary-bg{
+    background-color: #FFF8F3;
+}
 .text-primary{
     color:#FD6E0A  ;
 }
@@ -34,6 +36,21 @@
     border: none;
 }
 
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+
+.section-description{
+    font-size: 18px;
+    color:#757575;
+}
+
+.text-center{
+    text-align: center;
+}
+/* nav style  */
 nav{
     display: flex;
     justify-content: space-between;
@@ -89,3 +106,42 @@ nav ul li a{
 .banner-profile-pic{
     width: 584px;
 }
+
+/* main styles  */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+main section{
+     margin-top: 130px;
+     margin-bottom: 130px;
+}
+/* about style  */
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+   
+}
+
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+
+item-description{
+    font-weight: 600;
+}
+/* skill section style  */
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+ 
